--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 .pCarousel {
     position: relative;
     padding: 10px;
-    border: 1px solid #000;
+    box-shadow: 0 0 22px #000;
 }
 .pCarousel * {
     padding: 0;
@@ -36,9 +36,10 @@
     float: left;
 }
 .pCarousel .mainWrapper .thumbsWrapper {
-    padding: 10px 0;
+    padding-top: 10px;
+    padding-bottom: 2px;
     overflow: auto;
-    border: 1px solid #ffc;
+    /*border: 1px solid #ffc;*/
 }
 .pCarousel .mainWrapper .thumbsWrapper ul {
     list-style: none;
@@ -51,8 +52,15 @@
 .pCarousel .mainWrapper .thumbsWrapper ul li {
     display: inline-block;
     width: 80px;
+    cursor: pointer;
     margin-right: 5px;
     height: 80px;
+}
+.pCarousel .mainWrapper .thumbsWrapper ul li:hover{
+    box-shadow: 0 0 12px #000;
+}
+.pCarousel .mainWrapper .thumbsWrapper ul li.active {
+    border: 1px solid #000;
 }
 .pCarousel .mainWrapper .thumbsWrapper ul li img {
     width: 80px;
